# region-map-wizard

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  rmw.spec  启动应用.bat
.claude/: CLAUDE.md  TASKS.md  TASK_ARCGIS_DEEP_DESIGN.md
docs/: DEV_NOTES.md  SPEC.md  arcgis_template_guide.md  gee_setup_guide.md
hooks/: rthook_gdal_dlls.py
scripts/: convert_tianditu.py  generate_test_fixtures.py  prepare_boundaries.py  rebuild_cities_json.py
src/: constants.py  main.py
src/core/: boundary_manager.py  cache_manager.py  config_manager.py  data_processor.py  exceptions.py  gee_fetcher.py  pipeline.py
src/data/: cities.json  color_ramps.json
src/gui/: gee_auth_dialog.py  main_window.py  shp_import_dialog.py  worker.py
src/renderers/: _arcgis_worker.py  _qgis_worker.py  arcgis_renderer.py  base.py  cartopy_renderer.py  qgis_renderer.py
src/resources/: style.qss
tests/: test_arcgis_renderer.py  test_boundary_manager.py  test_cache_manager.py  test_data_processor.py  test_gee_fetcher.py  test_pipeline.py  test_qgis_renderer.py
tests/fixtures/: sample_boundary.geojson  sample_dem.tif
